syntax="proto3";

package laptostore.grpc;


option go_package="example.com/pb";

import "messages/memory_message.proto";

message CPU {
    string name = 1;
    string brand = 2;
    uint32 cores = 3;
    uint32 threads = 4;
    double max_ghz = 6;
    double min_ghz = 7;
}


message GPU {
    string name = 1;
    string brand = 2;
    uint32 cores = 3;
    uint32 threads = 4;
    Memory memory = 5;
    double max_ghz = 6;
    double min_ghz = 7;
    
}



