syntax="proto3";
package laptostore.grpc;
option go_package = "example.com/pb";

import "proto/processor_message.proto";

message Laptop{
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    repeated GPU gpus = 5;
    oneof weight{
        int32 wight_kg = 6;
        int32 weight_lb = 7;
    }
}